--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.0.3
+gunicorn==22.0.0
 psycopg2-binary==2.9.9
 openpyxl==3.1.5
 pdfkit==1.0.0
-gunicorn==22.0.0
+python-dotenv
+# Add any other dependencies your app uses
