--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,12 @@
 services:
   - type: web
-    name: QM-Inventory-Management
+    name: qm-inventory-app
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      poetry env use 3.10.13 || pyenv install 3.10.13 && pyenv global 3.10.13
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: DATABASE_URL
-        value: <YOUR_DATABASE_URL>
-
+        value: your_postgres_url
