--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-Flask==3.0.3
-gunicorn==22.0.0
+Flask==2.3.3
+gunicorn==20.1.0
 psycopg2-binary==2.9.9
-openpyxl==3.1.5
+openpyxl==3.1.2
+python-dotenv==1.0.0
 pdfkit==1.0.0
-python-dotenv==1.1.0
+requests==2.31.0
+pandas==2.1.3
+# For PDF generation
+# Ensure you have wkhtmltopdf installed on your system
+# For Excel file handling   
+# For PostgreSQL database interaction
+# For environment variable management
