--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 Flask==2.3.3
 gunicorn==20.1.0
-psycopg2-binary==2.9.9
+psycopg[binary,pool]==3.2.3
 openpyxl==3.1.2
 python-dotenv==1.0.0
 pdfkit==1.0.0
-# For PDF generation
-# Ensure you have wkhtmltopdf installed on your system
-# For Excel file handling   
-# For PostgreSQL database interaction
-# For environment variable management
